# freeway

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml
proxy/: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
proxy/.github/: dependabot.yml
proxy/.github/workflows/: tests.yml
proxy/api/: admin_routes.py  app.py  auto_fit.py  data_governor.py  dependencies.py  detection.py  directives.py  health_probe.py  model_catalog.py  model_router.py  provider_execution.py  quota_governor.py  recommend.py  request_errors.py  response_cache_keys.py  response_streams.py  router_policy.py  routes.py  runtime.py  tool_filter.py
proxy/api/admin_config/: __init__.py  manifest.py  persistence.py  provider_manifest.py  sources.py  status.py  validation.py  values.py
proxy/api/admin_static/: admin.css  admin.js  index.html
proxy/api/handlers/: __init__.py  chat_completions.py  messages.py  responses.py  token_count.py
proxy/api/models/: anthropic.py  openai_chat_completions.py  openai_responses.py  responses.py
proxy/api/web_tools/: constants.py  egress.py  streaming.py
proxy/assets/: how-it-works.mmd
proxy/cli/: __init__.py  claude_env.py  entrypoints.py
proxy/cli/launchers/: __init__.py  claude.py  codex.py  codex_model_catalog.py  common.py
proxy/cli/managed/: __init__.py  claude.py  manager.py  session.py
proxy/config/: constants.py  env_files.py  env_template.py  model_quality.py  model_refs.py  paths.py  provider_catalog.py  provider_policy.py  provider_quota.py  settings.py
proxy/core/: circuit.py  model_probe.py  quota.py  recent_requests.py  response_cache.py  trace.py
proxy/core/anthropic/: __init__.py  conversion.py  native_sse_block_policy.py  provider_stream_error.py  request_serialization.py
proxy/core/health/: __init__.py  score.py  store.py
proxy/core/openai_chat_completions/: __init__.py  adapter.py  anthropic_sse.py  assembler.py  errors.py  ids.py  input.py  stream.py  tools.py
proxy/core/openai_responses/: __init__.py  adapter.py  anthropic_sse.py  errors.py  events.py  ids.py  input.py  items.py  reasoning.py  stream.py  tools.py  usage.py
proxy/examples/: library_quickstart.py
proxy/freeway/: __init__.py  _facade.py
proxy/messaging/: __init__.py  command_context.py  command_dispatcher.py  commands.py  managed_protocols.py  node_event_pipeline.py  node_runner.py  turn_intake.py  ui_updates.py  workflow.py
proxy/messaging/session/: __init__.py  message_log.py  persistence.py  store.py
proxy/messaging/transcript/: __init__.py  buffer.py  context.py  renderer.py  segments.py  subagents.py
proxy/messaging/trees/: __init__.py  graph.py  manager.py  node.py  processor.py  queue.py  repository.py  runtime.py  snapshot.py
proxy/providers/: base.py  defaults.py  error_mapping.py  exceptions.py  generic_openai_chat.py  key_pool.py  model_listing.py  rate_limit.py
proxy/providers/cerebras/: client.py
proxy/providers/cloudflare/: __init__.py  client.py
proxy/providers/codestral/: client.py
proxy/providers/deepseek/: __init__.py  client.py  compat.py
proxy/providers/fireworks/: client.py
proxy/providers/gemini/: client.py  quirks.py
proxy/providers/groq/: client.py
proxy/providers/kimi/: client.py
proxy/providers/llamacpp/: client.py
proxy/providers/lmstudio/: client.py
proxy/providers/mistral/: client.py
proxy/providers/nvidia_nim/: client.py  request_options.py  retry.py  tool_schema.py
proxy/providers/ollama/: client.py
proxy/providers/open_router/: client.py
proxy/providers/opencode/: client.py
proxy/providers/runtime/: __init__.py  cache.py  config.py  discovery.py  factory.py  model_cache.py  runtime.py  validation.py
proxy/providers/transports/: __init__.py  http.py
proxy/providers/wafer/: client.py
proxy/providers/zai/: client.py
proxy/scripts/: ci.ps1  ci.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh
proxy/smoke/: README.md  capabilities.py  conftest.py  features.py
proxy/smoke/lib/: child_process.py  claude_cli_matrix.py  config.py  e2e.py  local_providers.py  report.py  server.py  skips.py
proxy/smoke/prereq/: test_api_prereq_live.py  test_cli_prereq_live.py  test_local_provider_endpoints_prereq_live.py  test_provider_prereq_live.py  test_tools_prereq_live.py
proxy/smoke/product/: test_cli_package_product_live.py  test_config_extensibility_product_live.py  test_local_provider_product_live.py  test_messaging_product_live.py  test_provider_product_live.py
proxy/tests/: conftest.py
proxy/tests/api/: test_admin.py  test_admin_cache.py  test_api.py  test_api_handlers.py  test_app_lifespan_and_errors.py  (+24 more)
(+407 files in other folders)
